dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-web-app-deployment
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-web-app
  template:
    metadata:
      labels:
        app: argocd-web-app
    spec:
      containers:
      - name: argocd-web-app-container
        image: dragos93/argocd-web-app:18
        ports:
        - containerPort: 80
