dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-web-app-service
  namespace: argocd
spec:
  selector:
    app: argocd-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
